--- a/com.hybrid.nopcommerce/test-output/index.html
+++ b/com.hybrid.nopcommerce/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Admin\AppData\Local\Temp\testng-eclipse--2094696897\testng-customsuite.xml</span>
+                    <span>C:\Users\Admin\AppData\Local\Temp\testng-eclipse--741232023\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,32 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.nopcommerce.user.TC_Order" class="method navigator-link" hash-for-method="TC_05_Update_Product_Quantity(public void com.nopcommerce.user.TC_Order.TC_05_Update_Product_Quantity(java.lang.reflect.Method))">TC_05_Update_Product_Quantity(public void com.nopcommerce.user.TC_Order.TC_05_Update_Product_Quantity(java.lang.reflect.Method))</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.nopcommerce.user.TC_Order" class="method navigator-link" hash-for-method="TC_01_Add_Product_To_Cart(public void com.nopcommerce.user.TC_Order.TC_01_Add_Product_To_Cart(java.lang.reflect.Method))">TC_01_Add_Product_To_Cart(public void com.nopcommerce.user.TC_Order.TC_01_Add_Product_To_Cart(java.lang.reflect.Method))</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.nopcommerce.user.TC_Order" class="method navigator-link" hash-for-method="TC_02_Edit_Product(public void com.nopcommerce.user.TC_Order.TC_02_Edit_Product(java.lang.reflect.Method))">TC_02_Edit_Product(public void com.nopcommerce.user.TC_Order.TC_02_Edit_Product(java.lang.reflect.Method))</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.nopcommerce.user.TC_Order" class="method navigator-link" hash-for-method="TC_03_Remove_Product(public void com.nopcommerce.user.TC_Order.TC_03_Remove_Product(java.lang.reflect.Method))">TC_03_Remove_Product(public void com.nopcommerce.user.TC_Order.TC_03_Remove_Product(java.lang.reflect.Method))</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.nopcommerce.user.TC_Order" class="method navigator-link" hash-for-method="TC_04_Update_Product_Quantity(public void com.nopcommerce.user.TC_Order.TC_04_Update_Product_Quantity(java.lang.reflect.Method))">TC_04_Update_Product_Quantity(public void com.nopcommerce.user.TC_Order.TC_04_Update_Product_Quantity(java.lang.reflect.Method))</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.nopcommerce.user.TC_Order" class="method navigator-link" hash-for-method="TC_05_Checkout_With_Credit_Card(public void com.nopcommerce.user.TC_Order.TC_05_Checkout_With_Credit_Card(java.lang.reflect.Method))">TC_05_Checkout_With_Credit_Card(public void com.nopcommerce.user.TC_Order.TC_05_Checkout_With_Credit_Card(java.lang.reflect.Method))</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.nopcommerce.user.TC_Order" class="method navigator-link" hash-for-method="TC_06_Reorder(public void com.nopcommerce.user.TC_Order.TC_06_Reorder(java.lang.reflect.Method))">TC_06_Reorder(public void com.nopcommerce.user.TC_Order.TC_06_Reorder(java.lang.reflect.Method))</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,10 +150,50 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_05_Update_Product_Quantity(public void com.nopcommerce.user.TC_Order.TC_05_Update_Product_Quantity(java.lang.reflect.Method))">
-                  </a> <!-- TC_05_Update_Product_Quantity(public void com.nopcommerce.user.TC_Order.TC_05_Update_Product_Quantity(java.lang.reflect.Method)) -->
-                  <span class="method-name">TC_05_Update_Product_Quantity</span>
-                  <span class="parameters">(public void com.nopcommerce.user.TC_Order.TC_05_Update_Product_Quantity(java.lang.reflect.Method))</span>
+                  <a name="TC_01_Add_Product_To_Cart(public void com.nopcommerce.user.TC_Order.TC_01_Add_Product_To_Cart(java.lang.reflect.Method))">
+                  </a> <!-- TC_01_Add_Product_To_Cart(public void com.nopcommerce.user.TC_Order.TC_01_Add_Product_To_Cart(java.lang.reflect.Method)) -->
+                  <span class="method-name">TC_01_Add_Product_To_Cart</span>
+                  <span class="parameters">(public void com.nopcommerce.user.TC_Order.TC_01_Add_Product_To_Cart(java.lang.reflect.Method))</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="TC_02_Edit_Product(public void com.nopcommerce.user.TC_Order.TC_02_Edit_Product(java.lang.reflect.Method))">
+                  </a> <!-- TC_02_Edit_Product(public void com.nopcommerce.user.TC_Order.TC_02_Edit_Product(java.lang.reflect.Method)) -->
+                  <span class="method-name">TC_02_Edit_Product</span>
+                  <span class="parameters">(public void com.nopcommerce.user.TC_Order.TC_02_Edit_Product(java.lang.reflect.Method))</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="TC_03_Remove_Product(public void com.nopcommerce.user.TC_Order.TC_03_Remove_Product(java.lang.reflect.Method))">
+                  </a> <!-- TC_03_Remove_Product(public void com.nopcommerce.user.TC_Order.TC_03_Remove_Product(java.lang.reflect.Method)) -->
+                  <span class="method-name">TC_03_Remove_Product</span>
+                  <span class="parameters">(public void com.nopcommerce.user.TC_Order.TC_03_Remove_Product(java.lang.reflect.Method))</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="TC_04_Update_Product_Quantity(public void com.nopcommerce.user.TC_Order.TC_04_Update_Product_Quantity(java.lang.reflect.Method))">
+                  </a> <!-- TC_04_Update_Product_Quantity(public void com.nopcommerce.user.TC_Order.TC_04_Update_Product_Quantity(java.lang.reflect.Method)) -->
+                  <span class="method-name">TC_04_Update_Product_Quantity</span>
+                  <span class="parameters">(public void com.nopcommerce.user.TC_Order.TC_04_Update_Product_Quantity(java.lang.reflect.Method))</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="TC_05_Checkout_With_Credit_Card(public void com.nopcommerce.user.TC_Order.TC_05_Checkout_With_Credit_Card(java.lang.reflect.Method))">
+                  </a> <!-- TC_05_Checkout_With_Credit_Card(public void com.nopcommerce.user.TC_Order.TC_05_Checkout_With_Credit_Card(java.lang.reflect.Method)) -->
+                  <span class="method-name">TC_05_Checkout_With_Credit_Card</span>
+                  <span class="parameters">(public void com.nopcommerce.user.TC_Order.TC_05_Checkout_With_Credit_Card(java.lang.reflect.Method))</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="TC_06_Reorder(public void com.nopcommerce.user.TC_Order.TC_06_Reorder(java.lang.reflect.Method))">
+                  </a> <!-- TC_06_Reorder(public void com.nopcommerce.user.TC_Order.TC_06_Reorder(java.lang.reflect.Method)) -->
+                  <span class="method-name">TC_06_Reorder</span>
+                  <span class="parameters">(public void com.nopcommerce.user.TC_Order.TC_06_Reorder(java.lang.reflect.Method))</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +201,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Admin\AppData\Local\Temp\testng-eclipse--2094696897\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Admin\AppData\Local\Temp\testng-eclipse--741232023\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -185,16 +250,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_05_Update_Product_Quantity')
+data.setCell(0, 1, 'TC_05_Checkout_With_Credit_Card')
 data.setCell(0, 2, 'com.nopcommerce.user.TC_Order')
-data.setCell(0, 3, 17007);
+data.setCell(0, 3, 13888);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'TC_06_Reorder')
+data.setCell(1, 2, 'com.nopcommerce.user.TC_Order')
+data.setCell(1, 3, 10064);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'TC_04_Update_Product_Quantity')
+data.setCell(2, 2, 'com.nopcommerce.user.TC_Order')
+data.setCell(2, 3, 8994);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'TC_03_Remove_Product')
+data.setCell(3, 2, 'com.nopcommerce.user.TC_Order')
+data.setCell(3, 3, 6725);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'TC_02_Edit_Product')
+data.setCell(4, 2, 'com.nopcommerce.user.TC_Order')
+data.setCell(4, 3, 5041);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'TC_01_Add_Product_To_Cart')
+data.setCell(5, 2, 'com.nopcommerce.user.TC_Order')
+data.setCell(5, 3, 4019);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 17 seconds</span>
+              <span class="suite-total-time">Total running time: 48 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -227,19 +312,39 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass</span>
-                <span class="method-start">25 ms</span>
+                <span class="method-start">27 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">TC_05_Update_Product_Quantity(public void com.nopcommerce.user.TC_Order.TC_05_Update_Product_Quantity(java.lang.reflect.Method))</span>
-                <span class="method-start">6329 ms</span>
+                <span class="method-name">TC_01_Add_Product_To_Cart(public void com.nopcommerce.user.TC_Order.TC_01_Add_Product_To_Cart(java.lang.reflect.Method))</span>
+                <span class="method-start">6389 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">TC_02_Edit_Product(public void com.nopcommerce.user.TC_Order.TC_02_Edit_Product(java.lang.reflect.Method))</span>
+                <span class="method-start">10456 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">TC_03_Remove_Product(public void com.nopcommerce.user.TC_Order.TC_03_Remove_Product(java.lang.reflect.Method))</span>
+                <span class="method-start">15498 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">TC_04_Update_Product_Quantity(public void com.nopcommerce.user.TC_Order.TC_04_Update_Product_Quantity(java.lang.reflect.Method))</span>
+                <span class="method-start">22225 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">TC_05_Checkout_With_Credit_Card(public void com.nopcommerce.user.TC_Order.TC_05_Checkout_With_Credit_Card(java.lang.reflect.Method))</span>
+                <span class="method-start">31220 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">TC_06_Reorder(public void com.nopcommerce.user.TC_Order.TC_06_Reorder(java.lang.reflect.Method))</span>
+                <span class="method-start">45109 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">23384 ms</span>
+                <span class="method-start">55174 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">cleanExecutableDriver</span>
-                <span class="method-start">23397 ms</span>
+                <span class="method-start">55859 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
