--- a/com.hybrid.nopcommerce/test-output/old/Default suite/classes.html
+++ b/com.hybrid.nopcommerce/test-output/old/Default suite/classes.html
@@ -11,7 +11,27 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_05_Update_Product_Quantity</td>
+<td>TC_04_Update_Product_Quantity</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_05_Checkout_With_Credit_Card</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_02_Edit_Product</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_01_Add_Product_To_Cart</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_06_Reorder</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_03_Remove_Product</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
