--- a/com.hybrid.nopcommerce/test-output/old/Default suite/methods.html
+++ b/com.hybrid.nopcommerce/test-output/old/Default suite/methods.html
@@ -1,14 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6bfb84">  <td>22/06/08 01:08:58</td>   <td>0</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.user.TC_Order@bc4d5e1]">&gt;&gt;beforeSuit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@589311025</td>   <td></td> </tr>
-<tr bgcolor="d08f8d">  <td>22/06/08 01:08:58</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Order.beforeClass()[pri:0, instance:com.nopcommerce.user.TC_Order@bc4d5e1]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@589311025</td>   <td></td> </tr>
-<tr bgcolor="d08f8d">  <td>22/06/08 01:09:04</td>   <td>6325</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Order.TC_05_Update_Product_Quantity(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Order@bc4d5e1]">TC_05_Update_Product_Quantity</td> 
-  <td>main@589311025</td>   <td></td> </tr>
-<tr bgcolor="d08f8d">  <td>22/06/08 01:09:21</td>   <td>23380</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Order.afterClass()[pri:0, instance:com.nopcommerce.user.TC_Order@bc4d5e1]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@589311025</td>   <td></td> </tr>
-<tr bgcolor="6bfb84">  <td>22/06/08 01:09:21</td>   <td>23393</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.user.TC_Order@bc4d5e1]">&lt;&lt;cleanExecutableDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@589311025</td>   <td></td> </tr>
+<tr bgcolor="72f3ee">  <td>22/06/08 23:50:38</td>   <td>0</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.user.TC_Order@11a00961]">&gt;&gt;beforeSuit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@905650857</td>   <td></td> </tr>
+<tr bgcolor="729761">  <td>22/06/08 23:50:38</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Order.beforeClass()[pri:0, instance:com.nopcommerce.user.TC_Order@11a00961]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@905650857</td>   <td></td> </tr>
+<tr bgcolor="729761">  <td>22/06/08 23:50:44</td>   <td>6384</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Order.TC_01_Add_Product_To_Cart(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Order@11a00961]">TC_01_Add_Product_To_Cart</td> 
+  <td>main@905650857</td>   <td></td> </tr>
+<tr bgcolor="729761">  <td>22/06/08 23:50:48</td>   <td>10451</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Order.TC_02_Edit_Product(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Order@11a00961]">TC_02_Edit_Product</td> 
+  <td>main@905650857</td>   <td></td> </tr>
+<tr bgcolor="729761">  <td>22/06/08 23:50:53</td>   <td>15493</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Order.TC_03_Remove_Product(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Order@11a00961]">TC_03_Remove_Product</td> 
+  <td>main@905650857</td>   <td></td> </tr>
+<tr bgcolor="729761">  <td>22/06/08 23:51:00</td>   <td>22220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Order.TC_04_Update_Product_Quantity(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Order@11a00961]">TC_04_Update_Product_Quantity</td> 
+  <td>main@905650857</td>   <td></td> </tr>
+<tr bgcolor="729761">  <td>22/06/08 23:51:09</td>   <td>31215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Order.TC_05_Checkout_With_Credit_Card(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Order@11a00961]">TC_05_Checkout_With_Credit_Card</td> 
+  <td>main@905650857</td>   <td></td> </tr>
+<tr bgcolor="729761">  <td>22/06/08 23:51:23</td>   <td>45104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Order.TC_06_Reorder(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Order@11a00961]">TC_06_Reorder</td> 
+  <td>main@905650857</td>   <td></td> </tr>
+<tr bgcolor="729761">  <td>22/06/08 23:51:33</td>   <td>55169</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Order.afterClass()[pri:0, instance:com.nopcommerce.user.TC_Order@11a00961]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@905650857</td>   <td></td> </tr>
+<tr bgcolor="72f3ee">  <td>22/06/08 23:51:34</td>   <td>55854</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.user.TC_Order@11a00961]">&lt;&lt;cleanExecutableDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@905650857</td>   <td></td> </tr>
 </table>
